retter opp feil jeg har gjort

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,9 @@ body {
     font-family: "Roboto", serif;
 }
 
+header, article, div, aside, section, footer, main {
+    box-sizing: border-box;
+}
 
 header {
     display: flex;
