--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+// Det meste passet etter konvertering fra css till scss. Men har gjort noen endringer under main, og gjort om til article. 
+
 :root {
     --dark-blue: #2A324B;
     --blue: #58699D;
